--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -6,8 +6,19 @@
 	transform: translate(0, 0);
 }
 
+.container-navbar {
+	background-color: rgba(0, 0, 0, 0.4);
+}
+
 @media only screen and (max-width: 767px) {
 	.container-navbar {
 		background-color: rgba(0, 0, 0, 0.6);
 	}
+}
+
+.search-input {
+	outline: none;
+	flex-basis: 1;
+	background-color: rgba(0, 0, 0, 0.4);
+	border: 1px solid #fff;
 }
