--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,7 +1,20 @@
+@media only screen and (max-width: 500px) {
+	.fontsml {
+		font-size: 10px;
+	}
+}
+
+@media only screen and (min-width: 501px) {
+	.fontsml {
+		font-size: 14px;
+	}
+}
+
 .view-menu-mobile {
 	transform: translate(-200vw, 0);
 	transition: all 0.3s linear;
 }
+
 .view-menu-mobile.active {
 	transform: translate(0, 0);
 }
@@ -21,4 +34,8 @@
 	flex-basis: 1;
 	background-color: rgba(0, 0, 0, 0.4);
 	border: 1px solid #fff;
+}
+
+.grid {
+	transition: all 0.3s ease;
 }
